tests/invalid/Return_Invalid_7.whiley
import * from whiley.lang.*

int f(bool y):
    return !y
